--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     Hi , Pranali is here !!
     Welcoming here U all !!
+
+    Will add something amazing here to learn something new & interesting.
+    
 </body>
 </html>
