docs: change the message.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Hi , Pranali is here !!
     Welcoming here U all !!
 
-    Will add something amazing here to learn something new & interesting.
+    Will add something amazing here.
     
 </body>
 </html>
