update: details of project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     Welcoming here U all !!
 
     Will add something amazing here.
+    I have worked on few CLI apps , I will showcase it here tomorrow.
     
 </body>
 </html>
