update: favorite book

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     Welcoming here U all !!
 
     Will add something amazing here.
+    <br>
+    My favorite book is 'Tell Me a Story', whose editor is Rabinder Singh.
+    It's really amaing book having the set of 15-16 different stories.
+    Happy reading :) 
     
 </body>
 </html>
