update: syntax added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     Will add something amazing here.
 
+    I have worked on few CLI apps , I will showcase it here tomorrow.
+
     My favorite book is 'Tell Me a Story', whose editor is Rabinder Singh.
     It's really amaing book having the set of 15-16 different stories.
     Happy reading :) 
